banner overlay overflow prob solved

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 @layer components {
     .custom-container {
-        @apply px-2 lg:w-4/5 lg:mx-auto mt-2;
+        @apply px-2 lg:w-11/12 lg:mx-auto mt-2;
     }
 }
 
